finish the UI part of the project
revision the code in main branch and add div
element as the container and also three buttons
live inside another div. use querySelector to get
the hold of the buttons and added eventListener
with arrow function to set up the callback
function (playRound).

[Ticket: X]

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <script src="./logic.js" defer></script>
+    <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
-    <script src="./logic.js"></script>
+    <div class="container">
+    <div class="buttons">
+        <button id="rock"></button>
+        <button id="paper"></button>
+        <button id="scissors"></button>
+    </div>
+        
+    <h3 class="result"></h4>
+    <h2 class="scoreboard"></h3>
+    </div>
 </body>
 </html>
